Fixed overlap of search container on empty page. Search capitalization fixed.

--- a/src/containers/search/searchNote.scss
+++ b/src/containers/search/searchNote.scss
@@ -2,6 +2,7 @@
 
 .search-note__container {
   position: absolute;
+  z-index: 10;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.6);
