--- a/src/styles/panels.scss
+++ b/src/styles/panels.scss
@@ -57,6 +57,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  position: relative;
 }
 
 .empty-page__content {
